--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rocket = { version = "0.5", features = ["json"] }
+serde_json = "1.0.108"
+postgres = "0.19.7"
+tokio = { version = "1.0", features = ["full"] }
+sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
