--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde_json = "1.0.108"
 postgres = "0.19.7"
 tokio = { version = "1.0", features = ["full"] }
 sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
+log = "0.4.20"
+env_logger = "0.10.1"
