--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "mac
 log = "0.4.20"
 env_logger = "0.10.1"
 redis = { version = "0.23.4", features = ["tokio-comp"] }
+rocket_cors = "0.6.0"
