--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ log = "0.4.20"
 env_logger = "0.10.1"
 redis = { version = "0.23.4", features = ["tokio-comp"] }
 rocket_cors = "0.6.0"
+reqwest = { version = "0.11", features = ["json"] }
